# vsomeip-docker

./: LICENSE  README.md  docker-compose.yml
client/: CMakeLists.txt  Dockerfile  client-config.json  client.cpp  entrypoint.sh
server/: CMakeLists.txt  Dockerfile  entrypoint.sh  sensor_data.cpp  sensor_data.h  server-config.json  server.cpp
server/tests/: CMakeLists.txt  test_handlers.cpp  test_server.cpp
